# ur5-diary

./: .gitignore  readme.md
test_1/: test_1.py  test_2.py  test_3.py
test_10_kresse/: CMakeLists.txt  TimeMapper.h  WavFile.h  gphoto2_capture.sh  main.cpp
test_2/: test_2_1.py  test_2_2.py
test_2_servoj/: CMakeLists.txt  main.cpp
test_3_crooked_pen/: CMakeLists.txt  main.cpp
test_4_force/: CMakeLists.txt  main.cpp
test_5_poke/: CMakeLists.txt  main.cpp
test_6_recplay/: CMakeLists.txt  main.cpp
test_7_snake/: CMakeLists.txt  main.cpp
test_8_camera/: CMakeLists.txt  main.cpp
test_9_gummi/: gphoto2_capture.sh  gummi.py  gummi2.py  print_pos.py  robotiq_hande.py
test_9_gummi/obj_detect/: CMakeLists.txt  Info.plist  cameraParameters.xml  cameraParameters_logitech.xml  cameraParameters_macbook.xml
test_9_gummi/obj_detect/src/: cv_util.cpp  cv_util.h  detect_board.cpp  detect_board.h  main.cpp
